<resources>
    <string name="app_name">zhiting</string>
    <string name="guide_next_1">下一步 (1/4)</string>
    <string name="guide_next_2">下一步 (2/4)</string>
    <string name="guide_next_3">下一步 (3/4)</string>
    <string name="guide_next_4">完成 (4/4)</string>
    <string name="main_home">Home</string>
    <string name="main_scene">Scene</string>
    <string name="main_mine">Me</string>
    <string name="main_my_home">my home</string>
    <string name="main_welcome_join">欢迎加入智汀家庭云盘</string>
    <string name="main_get_login_status">获取你的登录状态</string>
    <string name="main_get_family_info">获取你的家庭信息</string>
    <string name="main_agreement">确认授权即视为同意《用户授权协议》</string>
    <string name="main_auth_failed">授权失败,请登录后再授权</string>
    <string name="main_confirm_auth">确认授权</string>
    <string name="main_agree">同意将智汀家庭云（%s）的登录状态及以下家庭/公司信息授权给智汀云盘</string>
    <string name="main_login_fail">登录失败</string>
    <string name="main_exit_tip">再点击一次退出</string>
    <string name="main_home_is_not_bind_with_sa">当前家庭未绑定SA</string>
    <string name="main_home_company_include">家庭/公司包括：</string>
    <string name="main_need_open_location">该功能建议打开位置信息</string>
    <string name="main_account_cancelled">云端账号已被注销</string>
    <string name="mine_home_company">home</string>
    <string name="mine_home_company_2">家庭/公司</string>
    <string name="mine_brand">support brand</string>
    <string name="mine_third_party">third party</string>
    <string name="mine_language">language</string>
    <string name="mine_professional">professional</string>
    <string name="mine_about_us">关于我们</string>
    <string name="mine_user_agreement_and_privacy_policy">用户协议和隐私政策</string>
    <string name="mine_user_info">Personal Data</string>
    <string name="mine_avatar">avatar</string>
    <string name="mine_nickname">nickname</string>
    <string name="mine_add_area">Add Home Or Company</string>
    <string name="mine_input_area">please input name of home</string>
    <string name="mine_room">room/area：</string>
    <string name="mine_add_room">Add Room/Area</string>
    <string name="mine_add">Add</string>
    <string name="mine_save">SAVE</string>
    <string name="mine_room_name">name of room</string>
    <string name="mine_input_room_name">please input name of room</string>
    <string name="mine_modify_nickname">modify nickname</string>
    <string name="mine_input_nickname">please input nickname</string>
    <string name="mine_greater_six">昵称不能少于6位</string>
    <string name="mine_save_success">SAVE SUCCESSFULLY</string>
    <string name="mine_save_fail">SAVE Fail</string>
    <string name="mine_home_company_name">Name of Home/Company</string>
    <string name="mine_invite">Invite you to join in</string>
    <string name="mine_joined">You have joined in this home</string>
    <string name="mine_update_success">Update Successfully</string>
    <string name="mine_quit_success">You have quited</string>
    <string name="mine_have_removed">Home has been removed</string>
    <string name="mine_qrcode_failed">Generate Failed</string>
    <string name="mine_setting">Setting</string>
    <string name="mine_web_user_password">可用以下用户名和密码登录网页专业版，局域网下可查看专业版地址</string>
    <string name="mine_username">username</string>
    <string name="mine_unsetting">未设置</string>
    <string name="mine_password">password</string>
    <string name="mine_set">Set</string>
    <string name="mine_input_username">input username</string>
    <string name="mine_input_password">input password</string>
    <string name="mine_username_length_must_be_greater_than_6">length of username must be greater than 6</string>
    <string name="mine_password_length_must_be_greater_than_6">length of password must be greater than 6</string>
    <string name="mine_set_successfully">Set Successfully</string>
    <string name="mine_username_chinese_cannot_be_entered">Chinese cannot be entered in username</string>
    <string name="mine_password_chinese_cannot_be_entered">Chinese cannot be entered in password</string>
    <string name="mine_crm_system">客户管理</string>
    <string name="mine_name">name</string>
    <string name="mine_qr_code">QrCode</string>
    <string name="mine_room_area">room/area</string>
    <string name="mine_member_num">Member（%s）</string>
    <string name="mine_quit_family">Quit</string>
    <string name="mine_room_area_add">Add Room</string>
    <string name="mine_room_area_manage">Room Manage</string>
    <string name="mine_room_del_tip">The equipments of this home/family will be unbound</string>
    <string name="mine_room_exit_tip">You can not look or control equipment after remove</string>
    <string name="mine_role">Role</string>
    <string name="mine_member_del">Del Member</string>
    <string name="mine_member_del_confirm">Are you sure to remove the member?</string>
    <string name="mine_member_detail">Member Detail</string>
    <string name="mine_select_role">Select Role</string>
    <string name="mine_invite_code">Invite Code</string>
    <string name="mine_invite_code_tip">选择角色并生成邀请码，即可邀请好友加入，邀请码10分钟内有效</string>
    <string name="mine_invite_code_generate">Generate QrCode</string>
    <string name="mine_invite_code_generated">邀请码已生成，请邀请好友加入吧</string>
    <string name="mine_invite_code_valid">10分钟内有效，请扫码加入</string>
    <string name="mine_invite_code_save">保存至相册</string>
    <string name="mine_room_empty">No Room</string>
    <string name="mine_home_empty">No Home/Company</string>
    <string name="mine_room_add">Add Room/Area</string>
    <string name="mine_home_add">Add Home/Company</string>
    <string name="mine_livingroom">Living Room</string>
    <string name="mine_restaurant">Restaurant</string>
    <string name="mine_master">Master\'s room</string>
    <string name="mine_study">Study</string>
    <string name="mine_toilet">Toilet</string>
    <string name="mine_administration_department">Administration Department</string>
    <string name="mine_marketing_department">Marketing Department</string>
    <string name="mine_r_d_department">R &amp; D department</string>
    <string name="mine_president_office">President Office</string>
    <string name="mine_add_success">Add Successfully</string>
    <string name="mine_remove">Remove</string>
    <string name="mine_remove_home">Remove Home</string>
    <string name="mine_remove_success">Remove Successfully</string>
    <string name="mine_remove_fail">Remove Fail</string>
    <string name="mine_home">My home</string>
    <string name="mine_room_duplicate">Room Duplicate</string>
    <string name="mine_room_device">Room Device</string>
    <string name="mine_remove_room_ask">Are you sure to remove the room ?</string>
    <string name="mine_remove_room_tip">remove the room but will not remove it\'s device</string>
    <string name="mine_mine_log_out">Logout</string>
    <string name="mine_mine_member_count">Members(%s)</string>
    <string name="mine_the_old_room">老人房</string>
    <string name="mine_the_child_room">儿童房</string>
    <string name="mine_balcony">阳台</string>
    <string name="mine_cloakroom">衣帽间</string>
    <string name="mine_remove_department_ask">确定删除该部门吗？</string>
    <string name="mine_remove_department_tip">删除部门，不会把成员删除</string>
    <string name="mine_edit_success">编辑成功</string>
    <string name="mine_edit_fail">编辑失败</string>
    <string name="mine_home_add_device">Add Device</string>
    <string name="mine_home_scanning">正在扫描...</string>
    <string name="mine_home_not_find_device">未发现设备</string>
    <string name="mine_home_scan_again">重新扫描</string>
    <string name="mine_home_scan_tip">1.请确保智能设备已连接电源，且已连接局域网\n2.第一次添加某品牌时，请进入【我-支持品牌】添加该品牌</string>
    <string name="mine_home_scan_tip_new">1.请确保设备已连接电源，且已重置；\n2.第一次添加某品牌的设备时，请进入【我-支持品牌】添加该品牌；</string>
    <string name="mine_home_device_connect">Device Connect</string>
    <string name="mine_home_device_connecting">Connecting...</string>
    <string name="mine_home_device_connect_failed">Connect Failed!</string>
    <string name="mine_home_device_connect_successful">Connect Successfully</string>
    <string name="mine_home_device_add">Add</string>
    <string name="mine_home_device_join">Scan Code</string>
    <string name="mine_mine_support_brand">Support Brand</string>
    <string name="mine_mine_search_hint">please input name of brand</string>
    <string name="mine_mine_cancel">cancel</string>
    <string name="mine_mine_add_plugin">Add Plugin</string>
    <string name="mine_mine_update">Update</string>
    <string name="mine_mine_added">Added</string>
    <string name="mine_mine_add_tips">可添加以下品牌的设备，如需添加其他品牌，可点击右上角“+”添加；如系统没有对应品牌的插件，可点击【添加插件】，手动上传</string>
    <string name="mine_mine_all_update">All update</string>
    <string name="mine_mine_supported_device">Supported Device</string>
    <string name="mine_mine_device_detail">Device Detail</string>
    <string name="mine_mine_plugin_del_tips_1">确定要删除该插件吗,该插件包含的设备也将一起被删除</string>
    <string name="mine_mine_plugin_del_tips_2">确定删除该插件吗？</string>
    <string name="mine_mine_plugin_detail">Plugin Detail</string>
    <string name="mine_mine_plugin_supported_device">Supported Device</string>
    <string name="mine_mine_upload_plugin">Upload Plugin</string>
    <string name="mine_mine_upload_plugin_tips_1">如系统没有该插件，可手动上传</string>
    <string name="mine_mine_upload_plugin_tips_2">上传失败，请上传正确的插件包</string>
    <string name="mine_mine_upload_plugin_success">Upload Successfully</string>
    <string name="mine_mine_scan_fail">Scan Failed</string>
    <string name="mine_phone_number">phone number</string>
    <string name="mine_transfer_owner">Transfer Owner</string>
    <string name="mine_transfer_tips">家庭拥有者有家庭的最高权限并且可以删除家庭，你可以转移拥有者角色给成员，转移后你的角色将变更为管理者。</string>
    <string name="mine_transfer">Transfer</string>
    <string name="mine_select_member_transfer">选择成员将拥有者角色转移给他：</string>
    <string name="mine_please_select_member">请选择要转移的成员</string>
    <string name="mine_transfer_success">转移成功</string>
    <string name="mine_uploading">上传中...</string>
    <string name="mine_sb_system_tips">系统支持以下品牌的设备，请进入对应品牌详情添加插件；如系统没有对应品牌的插件，可切换至【创作】中手动上传插件。</string>
    <string name="mine_clear">清空</string>
    <string name="mine_uploading_now">正在上传</string>
    <string name="mine_uploading_fail">上传失败，</string>
    <string name="mine_format_incorrect">插件包格式不正确</string>
    <string name="mine_account_and_security">账号与安全</string>
    <string name="mine_account_apply_cancellation">账号（%s）正在申请注销</string>
    <string name="mine_del_following_home">删除以下公司/家庭</string>
    <string name="mine_quit_following_home">退出以下公司/家庭</string>
    <string name="mine_forever_cancellation">永久注销，无法登录</string>
    <string name="mine_account_once_cancelled">账号一旦注销，无法登录，且会解除第三方账号的绑定关系</string>
    <string name="mine_all_product_data_cannot_found">所有产品数据将无法找回</string>
    <string name="mine_after_account_cancelled">注销后账号在智汀系产品内的云端数据将无法找回</string>
    <string name="mine_zhiting_account">智汀云账号通用但不限于以下产品：</string>
    <string name="mine_apply_cancel">申请注销</string>
    <string name="mine_after_cancellation">注销后，你的账号将进行以下处理：</string>
    <string name="home_device_name">Device Name</string>
    <string name="home_add_area">添加房间/区域</string>
    <string name="home_complete">完成</string>
    <string name="home_input_device_name_tip">请输入设备名称</string>
    <string name="home_device_location">Device Location</string>
    <string name="user_agreement_and_privacy_policy">用户协议与隐私政策</string>
    <string name="user_agreement_and_privacy_policy_content">我们深知隐私对您的重要性，为了更全面地呈现我们收集和使用您个人信息的相关情况，我们根据最新法律法规的要求，对用户协议和隐私政策进行了详细的修订。当您勾选同意即代表您已充分阅读、理解并接受更新过的《用户协议》和《隐私政策》的全部内容。请花一些时间熟悉我们的隐私政策，如果您有任何问题，请随时联系我们。</string>
    <string name="user_agreement">用户协议</string>
    <string name="and">与</string>
    <string name="privacy_policy">隐私政策</string>
    <string name="disagree">不同意</string>
    <string name="agree">同意</string>
    <string name="home_setup_hint1">房间管理</string>
    <string name="home_setup_hint2">设备排序</string>
    <string name="home_setup_hint3_1">隐藏离线设备</string>
    <string name="home_setup_hint4">常用设备设置</string>
</resources>